// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`定款の章立てを固定する > 合同会社: 全項目が未入力の状態 1`] = `
[
  {
    "articles": [
      {
        "body": [
          "当会社は、合同会社【商号】 と称する。",
        ],
        "t": "（商号）",
      },
      {
        "body": [
          "当会社は、次の事業を営むことを目的とする。",
        ],
        "list": [
          "前各号に附帯又は関連する一切の事業",
        ],
        "t": "（目的）",
      },
      {
        "body": [
          "当会社は、本店を 【本店の所在地】 に置く。",
        ],
        "t": "（本店の所在地）",
      },
      {
        "body": [
          "当会社の公告は、官報に掲載する方法により行う。",
        ],
        "t": "（公告方法）",
      },
    ],
    "chapter": "第1章 総則",
  },
  {
    "articles": [
      {
        "body": [
          "社員 【社員1 氏名】（住所: 【社員1 住所】）は有限責任社員とし、その出資額は 【出資額】 とする。",
        ],
        "t": "（社員の氏名、住所、出資及び責任）",
      },
      {
        "body": [
          "社員は、他の社員全員の承諾がなければ、その持分の全部又は一部を他人に譲渡することができない。",
        ],
        "t": "（持分の譲渡）",
      },
    ],
    "chapter": "第2章 社員及び出資",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の業務は、社員の全員が執行する。",
        ],
        "t": "（業務執行社員）",
      },
      {
        "body": [
          "当会社の代表社員は 【代表社員 氏名】 とする。",
        ],
        "t": "（代表社員）",
      },
      {
        "body": [
          "業務執行社員の報酬は、総社員の同意をもって定める。",
        ],
        "t": "（報酬）",
      },
    ],
    "chapter": "第3章 業務の執行及び会社の代表",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の事業年度は、毎年4月1日から翌年3月末日までの年1期とする。",
        ],
        "t": "（事業年度）",
      },
      {
        "body": [
          "当会社の資本金の額は、金【資本金の額】円とする。",
        ],
        "t": "（資本金の額）",
      },
    ],
    "chapter": "第4章 計算",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の最初の事業年度は、当会社成立の日から 【最初の事業年度の末日】 までとする。",
        ],
        "t": "（最初の事業年度）",
      },
      {
        "body": [
          "この定款に定めのない事項は、すべて会社法その他の法令の定めるところによる。",
        ],
        "t": "（定款に定めのない事項）",
      },
    ],
    "chapter": "第5章 附則",
  },
]
`;

exports[`定款の章立てを固定する > 合同会社: 全項目を入力した状態 1`] = `
[
  {
    "articles": [
      {
        "body": [
          "当会社は、合同会社サンプル と称する。",
        ],
        "t": "（商号）",
      },
      {
        "body": [
          "当会社は、次の事業を営むことを目的とする。",
        ],
        "list": [
          "Web サービスの企画・運営",
          "前各号に附帯又は関連する一切の事業",
        ],
        "t": "（目的）",
      },
      {
        "body": [
          "当会社は、本店を 大阪府大阪市 に置く。",
        ],
        "t": "（本店の所在地）",
      },
      {
        "body": [
          "当会社の公告は、官報に掲載する方法により行う。",
        ],
        "t": "（公告方法）",
      },
    ],
    "chapter": "第1章 総則",
  },
  {
    "articles": [
      {
        "body": [
          "社員 鈴木 花子（住所: 大阪府大阪市2-2）は有限責任社員とし、その出資額は 30万円 とする。",
        ],
        "t": "（社員の氏名、住所、出資及び責任）",
      },
      {
        "body": [
          "社員は、他の社員全員の承諾がなければ、その持分の全部又は一部を他人に譲渡することができない。",
        ],
        "t": "（持分の譲渡）",
      },
    ],
    "chapter": "第2章 社員及び出資",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の業務は、社員の全員が執行する。",
        ],
        "t": "（業務執行社員）",
      },
      {
        "body": [
          "当会社の代表社員は 鈴木 花子 とする。",
        ],
        "t": "（代表社員）",
      },
      {
        "body": [
          "業務執行社員の報酬は、総社員の同意をもって定める。",
        ],
        "t": "（報酬）",
      },
    ],
    "chapter": "第3章 業務の執行及び会社の代表",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の事業年度は、毎年1月1日から同年12月末日までの年1期とする。",
        ],
        "t": "（事業年度）",
      },
      {
        "body": [
          "当会社の資本金の額は、金300,000円とする。",
        ],
        "t": "（資本金の額）",
      },
    ],
    "chapter": "第4章 計算",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の最初の事業年度は、当会社成立の日から 2026年12月31日 までとする。",
        ],
        "t": "（最初の事業年度）",
      },
      {
        "body": [
          "この定款に定めのない事項は、すべて会社法その他の法令の定めるところによる。",
        ],
        "t": "（定款に定めのない事項）",
      },
    ],
    "chapter": "第5章 附則",
  },
]
`;

exports[`定款の章立てを固定する > 株式会社: 全項目が未入力の状態（【】が残る） 1`] = `
[
  {
    "articles": [
      {
        "body": [
          "当会社は、株式会社【商号】 と称する。",
        ],
        "t": "（商号）",
      },
      {
        "body": [
          "当会社は、次の事業を営むことを目的とする。",
        ],
        "list": [
          "前各号に附帯又は関連する一切の事業",
        ],
        "t": "（目的）",
      },
      {
        "body": [
          "当会社は、本店を 【本店の所在地】 に置く。",
        ],
        "t": "（本店の所在地）",
      },
      {
        "body": [
          "当会社の公告は、官報に掲載する方法により行う。",
        ],
        "t": "（公告方法）",
      },
    ],
    "chapter": "第1章 総則",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の発行可能株式総数は、【発行可能株式総数】株とする。",
        ],
        "t": "（発行可能株式総数）",
      },
      {
        "body": [
          "当会社の株式については、株券を発行しない。",
        ],
        "t": "（株券の不発行）",
      },
      {
        "body": [
          "当会社の株式を譲渡により取得するには、株主総会の承認を受けなければならない。ただし、当会社の株主に譲渡する場合は、承認をしたものとみなす。",
        ],
        "t": "（株式の譲渡制限）",
      },
      {
        "body": [
          "当会社は、相続その他の一般承継により当会社の株式を取得した者に対し、当該株式を当会社に売り渡すことを請求することができる。",
        ],
        "t": "（相続人等に対する売渡請求）",
      },
      {
        "body": [
          "当会社は、毎事業年度末日の最終の株主名簿に記載された議決権を有する株主をもって、その事業年度に関する定時株主総会において権利を行使することができる株主とする。",
        ],
        "t": "（基準日）",
      },
      {
        "body": [
          "当会社の株主及び登録株式質権者又はそれらの法定代理人は、当会社所定の書式により、氏名又は名称、住所及び印鑑又は署名を当会社に届け出なければならない。届出事項に変更を生じた場合も同様とする。",
        ],
        "t": "（株主の住所等の届出）",
      },
    ],
    "chapter": "第2章 株式",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の定時株主総会は、毎事業年度の終了後3か月以内に招集し、臨時株主総会は、必要がある場合に招集する。",
        ],
        "t": "（招集時期）",
      },
      {
        "body": [
          "株主総会は、法令に別段の定めがある場合を除き、取締役が招集する。取締役が2名以上ある場合は、あらかじめ取締役の互選により定めた取締役が招集する。",
        ],
        "t": "（招集権者）",
      },
      {
        "body": [
          "株主総会の招集通知は、会日の1週間前までに議決権を有する各株主に対して発する。ただし、議決権を行使できる株主全員の同意があるときは、招集の手続を経ないで開催することができる。",
        ],
        "t": "（招集通知）",
      },
      {
        "body": [
          "株主総会の議長は、当該株主総会で選任する。",
        ],
        "t": "（議長）",
      },
      {
        "body": [
          "株主総会の決議は、法令又は定款に別段の定めがある場合を除き、議決権を行使することができる株主の議決権の過半数を有する株主が出席し、出席した当該株主の議決権の過半数をもって行う。",
        ],
        "t": "（決議の方法）",
      },
      {
        "body": [
          "株主総会の議事については、法令の定めるところにより議事録を作成し、10年間本店に備え置く。",
        ],
        "t": "（議事録）",
      },
    ],
    "chapter": "第3章 株主総会",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の取締役は、1名以上とする。",
        ],
        "t": "（取締役の員数）",
      },
      {
        "body": [
          "取締役は、株主総会において、議決権を行使することができる株主の議決権の3分の1以上を有する株主が出席し、出席した当該株主の議決権の過半数の決議によって選任する。",
        ],
        "t": "（取締役の選任）",
      },
      {
        "body": [
          "取締役の任期は、選任後10年以内に終了する事業年度のうち最終のものに関する定時株主総会の終結の時までとする。補欠又は増員により選任された取締役の任期は、前任者又は他の在任取締役の任期の残存期間と同一とする。",
        ],
        "t": "（取締役の任期）",
      },
      {
        "body": [
          "当会社に取締役を2名以上置く場合は、取締役の互選により代表取締役1名を定め、代表取締役をもって社長とする。取締役が1名の場合は、その取締役を代表取締役とする。",
        ],
        "t": "（代表取締役及び社長）",
      },
      {
        "body": [
          "取締役の報酬、賞与その他の職務執行の対価として当会社から受ける財産上の利益は、株主総会の決議によって定める。",
        ],
        "t": "（取締役の報酬等）",
      },
    ],
    "chapter": "第4章 取締役及び代表取締役",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の事業年度は、毎年4月1日から翌年3月末日までの年1期とする。",
        ],
        "t": "（事業年度）",
      },
      {
        "body": [
          "剰余金の配当は、毎事業年度末日の最終の株主名簿に記載された株主又は登録株式質権者に対して行う。",
        ],
        "t": "（剰余金の配当）",
      },
      {
        "body": [
          "剰余金の配当がその支払の提供の日から3年を経過しても受領されないときは、当会社はその支払義務を免れる。",
        ],
        "t": "（配当の除斥期間）",
      },
    ],
    "chapter": "第5章 計算",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の設立に際して出資される財産の価額は、金【出資される財産の価額】円とする。",
        ],
        "t": "（設立に際して出資される財産の価額）",
      },
      {
        "body": [
          "当会社の成立後の資本金の額は、金【出資される財産の価額】円とする。",
        ],
        "t": "（成立後の資本金の額）",
      },
      {
        "body": [
          "当会社の最初の事業年度は、当会社成立の日から 【最初の事業年度の末日】 までとする。",
        ],
        "t": "（最初の事業年度）",
      },
      {
        "body": [
          "当会社の設立時取締役は、【設立時取締役 氏名】 とする。",
        ],
        "t": "（設立時取締役）",
      },
      {
        "body": [
          "当会社の設立時発行株式は、発起人がその全部を引き受けるものとし、各発起人が引き受ける株式数及び払込金額は次のとおりとする。",
          "発起人 【発起人1 氏名】（住所: 【発起人1 住所】）: 【引受株数・出資額】",
        ],
        "t": "（発起人の氏名、住所及び引受株式）",
      },
      {
        "body": [
          "この定款に定めのない事項は、すべて会社法その他の法令の定めるところによる。",
        ],
        "t": "（法令の準拠）",
      },
    ],
    "chapter": "第6章 附則",
  },
]
`;

exports[`定款の章立てを固定する > 株式会社: 全項目を入力した状態 1`] = `
[
  {
    "articles": [
      {
        "body": [
          "当会社は、株式会社サンプル商会 と称する。",
        ],
        "t": "（商号）",
      },
      {
        "body": [
          "当会社は、次の事業を営むことを目的とする。",
        ],
        "list": [
          "ソフトウェアの開発及び販売",
          "経営コンサルティング業",
          "前各号に附帯又は関連する一切の事業",
        ],
        "t": "（目的）",
      },
      {
        "body": [
          "当会社は、本店を 東京都千代田区 に置く。",
        ],
        "t": "（本店の所在地）",
      },
      {
        "body": [
          "当会社の公告は、電子公告により行う。公告掲載 URL は https://example.com/ir とする。ただし、事故その他やむを得ない事由によって電子公告による公告をすることができない場合は、官報に掲載する方法により行う。",
        ],
        "t": "（公告方法）",
      },
    ],
    "chapter": "第1章 総則",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の発行可能株式総数は、1000株とする。",
        ],
        "t": "（発行可能株式総数）",
      },
      {
        "body": [
          "当会社の株式については、株券を発行しない。",
        ],
        "t": "（株券の不発行）",
      },
      {
        "body": [
          "当会社の株式を譲渡により取得するには、株主総会の承認を受けなければならない。ただし、当会社の株主に譲渡する場合は、承認をしたものとみなす。",
        ],
        "t": "（株式の譲渡制限）",
      },
      {
        "body": [
          "当会社は、相続その他の一般承継により当会社の株式を取得した者に対し、当該株式を当会社に売り渡すことを請求することができる。",
        ],
        "t": "（相続人等に対する売渡請求）",
      },
      {
        "body": [
          "当会社は、毎事業年度末日の最終の株主名簿に記載された議決権を有する株主をもって、その事業年度に関する定時株主総会において権利を行使することができる株主とする。",
        ],
        "t": "（基準日）",
      },
      {
        "body": [
          "当会社の株主及び登録株式質権者又はそれらの法定代理人は、当会社所定の書式により、氏名又は名称、住所及び印鑑又は署名を当会社に届け出なければならない。届出事項に変更を生じた場合も同様とする。",
        ],
        "t": "（株主の住所等の届出）",
      },
    ],
    "chapter": "第2章 株式",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の定時株主総会は、毎事業年度の終了後3か月以内に招集し、臨時株主総会は、必要がある場合に招集する。",
        ],
        "t": "（招集時期）",
      },
      {
        "body": [
          "株主総会は、法令に別段の定めがある場合を除き、取締役が招集する。取締役が2名以上ある場合は、あらかじめ取締役の互選により定めた取締役が招集する。",
        ],
        "t": "（招集権者）",
      },
      {
        "body": [
          "株主総会の招集通知は、会日の1週間前までに議決権を有する各株主に対して発する。ただし、議決権を行使できる株主全員の同意があるときは、招集の手続を経ないで開催することができる。",
        ],
        "t": "（招集通知）",
      },
      {
        "body": [
          "株主総会の議長は、当該株主総会で選任する。",
        ],
        "t": "（議長）",
      },
      {
        "body": [
          "株主総会の決議は、法令又は定款に別段の定めがある場合を除き、議決権を行使することができる株主の議決権の過半数を有する株主が出席し、出席した当該株主の議決権の過半数をもって行う。",
        ],
        "t": "（決議の方法）",
      },
      {
        "body": [
          "株主総会の議事については、法令の定めるところにより議事録を作成し、10年間本店に備え置く。",
        ],
        "t": "（議事録）",
      },
    ],
    "chapter": "第3章 株主総会",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の取締役は、1名以上とする。",
        ],
        "t": "（取締役の員数）",
      },
      {
        "body": [
          "取締役は、株主総会において、議決権を行使することができる株主の議決権の3分の1以上を有する株主が出席し、出席した当該株主の議決権の過半数の決議によって選任する。",
        ],
        "t": "（取締役の選任）",
      },
      {
        "body": [
          "取締役の任期は、選任後10年以内に終了する事業年度のうち最終のものに関する定時株主総会の終結の時までとする。補欠又は増員により選任された取締役の任期は、前任者又は他の在任取締役の任期の残存期間と同一とする。",
        ],
        "t": "（取締役の任期）",
      },
      {
        "body": [
          "当会社に取締役を2名以上置く場合は、取締役の互選により代表取締役1名を定め、代表取締役をもって社長とする。取締役が1名の場合は、その取締役を代表取締役とする。",
        ],
        "t": "（代表取締役及び社長）",
      },
      {
        "body": [
          "取締役の報酬、賞与その他の職務執行の対価として当会社から受ける財産上の利益は、株主総会の決議によって定める。",
        ],
        "t": "（取締役の報酬等）",
      },
    ],
    "chapter": "第4章 取締役及び代表取締役",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の事業年度は、毎年4月1日から翌年3月末日までの年1期とする。",
        ],
        "t": "（事業年度）",
      },
      {
        "body": [
          "剰余金の配当は、毎事業年度末日の最終の株主名簿に記載された株主又は登録株式質権者に対して行う。",
        ],
        "t": "（剰余金の配当）",
      },
      {
        "body": [
          "剰余金の配当がその支払の提供の日から3年を経過しても受領されないときは、当会社はその支払義務を免れる。",
        ],
        "t": "（配当の除斥期間）",
      },
    ],
    "chapter": "第5章 計算",
  },
  {
    "articles": [
      {
        "body": [
          "当会社の設立に際して出資される財産の価額は、金1,000,000円とする。",
        ],
        "t": "（設立に際して出資される財産の価額）",
      },
      {
        "body": [
          "当会社の成立後の資本金の額は、金1,000,000円とする。",
        ],
        "t": "（成立後の資本金の額）",
      },
      {
        "body": [
          "当会社の最初の事業年度は、当会社成立の日から 2027年3月31日 までとする。",
        ],
        "t": "（最初の事業年度）",
      },
      {
        "body": [
          "当会社の設立時取締役は、山田 太郎 とする。",
        ],
        "t": "（設立時取締役）",
      },
      {
        "body": [
          "当会社の設立時発行株式は、発起人がその全部を引き受けるものとし、各発起人が引き受ける株式数及び払込金額は次のとおりとする。",
          "発起人 山田 太郎（住所: 東京都千代田区1-1）: 100株・100万円",
        ],
        "t": "（発起人の氏名、住所及び引受株式）",
      },
      {
        "body": [
          "この定款に定めのない事項は、すべて会社法その他の法令の定めるところによる。",
        ],
        "t": "（法令の準拠）",
      },
    ],
    "chapter": "第6章 附則",
  },
]
`;
